Exc5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-to-back
  namespace: erebor
spec:
  podSelector:
    matchLabels:
      app: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-front-to-admin-back
  namespace: erebor
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: admin-front-end
